[workspace]
resolver = "2"

members = [
    "crates/allocator",
    "crates/arm_gic",
    "crates/arm_pl011",
    "crates/dw_apb_uart",
    "crates/axerrno",
    "crates/axfs_devfs",
    "crates/axfs_ramfs",
    "crates/axfs_vfs",
    "crates/axio",
    "crates/capability",
    "crates/crate_interface",
    "crates/driver_9p",
    "crates/driver_block",
    "crates/driver_common",
    "crates/driver_display",
    "crates/driver_net",
    "crates/driver_pci",
    "crates/driver_virtio",
	"crates/dtb",
    "crates/flatten_objects",
    "crates/handler_table",
    "crates/kernel_guard",
    "crates/lazy_init",
    "crates/linked_list",
    "crates/memory_addr",
    "crates/page_table",
    "crates/page_table_entry",
    "crates/percpu",
    "crates/percpu_macros",
    "crates/ratio",
    "crates/scheduler",
    "crates/slab_allocator",
    "crates/spinlock",
    "crates/timer_list",
    "crates/tuple_for_each",

    "modules/axalloc",
    "modules/axlog",
    "modules/axnet",
    "modules/axsync",
    "modules/rux9p",
    "modules/ruxconfig",
    "modules/ruxdisplay",
    "modules/ruxdriver",
    "modules/ruxfs",
    "modules/ruxhal",
    "modules/ruxruntime",
    "modules/ruxtask",
    "modules/ruxfutex",

    "api/ruxfeat",
    "api/arceos_api",
    "api/ruxos_posix_api",

    "ulib/axstd",
    "ulib/ruxlibc",
    "ulib/ruxmusl",

    "apps/display/basic_painting",
    "apps/display/draw_map",
    "apps/fs/shell",
]

[profile.release]
lto = true

[profile.reldebug]
inherits = "release"
debug = true


[patch.crates-io]
crate_interface = { path = "crates/crate_interface" }
