[workspace]
resolver = "2"

members = [
    "crates/*",
    "modules/*",
    "api/*",
    "ulib/axstd",
    "ulib/ruxmusl",

    "apps/display/basic_painting",
    "apps/display/draw_map",
    "apps/fs/shell",
]

[workspace.dependencies]
# Centralized dependency version for shared crates.
# Usage: In child crates, write `bitflags = { workspace = true }`.
bitflags = "2.6"
log = "0.4"
spin = "0.9"

[profile.release]
lto = true

[profile.reldebug]
inherits = "release"
debug = true

[patch.crates-io]
sbi-spec = { git = "https://github.com/Sssssaltyfish/rustsbi.git", rev = "a25d448d3d770c6db493a472e3e78d949b63f523", optional = true }
