[package]
name = "arceos_api"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Public APIs and types for ArceOS modules"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/api/arceos_api"
documentation = "https://rcore-os.github.io/arceos/arceos_api/index.html"

[features]
default = []

irq = ["ruxfeat/irq"]
rtc = ["ruxfeat/rtc"]
alloc = ["dep:axalloc", "ruxfeat/alloc"]
paging = ["alloc", "ruxfeat/paging"]
multitask = ["ruxtask/multitask", "ruxfeat/multitask"]
fs = ["dep:ruxfs", "ruxfeat/fs"]
net = ["dep:ruxnet", "ruxfeat/net"]
lwip = ["ruxfeat/lwip"]
display = ["dep:ruxdisplay", "ruxfeat/display"]
blkfs = ["ruxfeat/blkfs"]
myfs = ["ruxfeat/myfs"]

# Use dummy functions if the feature is not enabled
dummy-if-not-enabled = []

[dependencies]
crate_interface = "0.1.1"
ruxfeat = { path = "../ruxfeat" }
ruxruntime = { path = "../../modules/ruxruntime" }
ruxconfig = { path = "../../modules/ruxconfig" }
ruxmm = {path = "../../modules/ruxmm"}
axlog = { path = "../../modules/axlog" }
axio = { path = "../../crates/axio" }
axerrno = { path = "../../crates/axerrno" }
ruxhal = { path = "../../modules/ruxhal" }
axalloc = { path = "../../modules/axalloc", optional = true }
ruxtask = { path = "../../modules/ruxtask", optional = true }
ruxfs = { path = "../../modules/ruxfs", optional = true }
ruxnet = { path = "../../modules/ruxnet", optional = true }
ruxdisplay = { path = "../../modules/ruxdisplay", optional = true }
