[package]
name = "driver_common"
version = "0.1.0"
edition = "2021"
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "Zheng Wu <hello_weekday@163.com>",
]
description = "Device driver interfaces used by RuxOS"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/syswonder/ruxos"
repository = "https://github.com/syswonder/ruxos/tree/main/crates/driver_common"

[dependencies]
