[package]
name = "driver_virtio"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>", "ChengXiang Qi <kuangjux@outlook.com>"]
description = "Wrappers of some devices in the `virtio-drivers` crate, that implement traits in the `driver_common` series crates"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/crates/driver_virtio"
documentation = "https://rcore-os.github.io/arceos/driver_virtio/index.html"

[features]
block = ["driver_block"]
net = ["driver_net"]
gpu = ["driver_display"]
v9p = ["driver_9p"]

[dependencies]
log = "0.4"
spin = "0.9"
driver_common = { path = "../driver_common" }
driver_block = { path = "../driver_block", optional = true }
driver_net = { path = "../driver_net", optional = true }
driver_display = { path = "../driver_display", optional = true}
driver_9p = { path = "../driver_9p", optional = true}
virtio-drivers = { git = "https://github.com/syswonder/virtio-drivers.git", rev = "62dbe5a" }
