[package]
name = "ringbuffer"
version = "0.1.0"
edition = "2021"
authors = ["RuiWei Cheng <1982833213@qq.com>", "Quan Shi <749990226@qq.com>"]
description = "A data structure that uses a single, fixed-size buffer as if it were connected end-to-end"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/syswonder/ruxos"
repository = "https://github.com/syswonder/ruxos/tree/dev/crates/ringbuffer"

[build-dependencies]
