[package]
name = "axruntime"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Runtime library of ArceOS"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/modules/axruntime"
documentation = "https://rcore-os.github.io/arceos/axruntime/index.html"

[features]
default = []

smp = ["axhal/smp"]
irq = ["axhal/irq", "axtask?/irq", "percpu", "kernel_guard"]
tls = ["axhal/tls", "axtask?/tls"]
alloc = ["axalloc", "dtb"]
paging = ["axhal/paging", "lazy_init"]
rtc = ["axhal/rtc"]

multitask = ["axtask/multitask"]
fs = ["axdriver", "axfs"]
virtio-9p = ["fs", "ax9p"]
net-9p = ["fs", "ax9p"]
net = ["axdriver", "axnet"]
display = ["axdriver", "axdisplay"]
signal = []

musl = []

[dependencies]
cfg-if = "1.0"
axhal = { path = "../axhal" }
axlog = { path = "../axlog" }
axconfig = { path = "../axconfig" }
axalloc = { path = "../axalloc", optional = true }
axdriver = { path = "../axdriver", optional = true }
axfs = { path = "../axfs", optional = true }
ax9p = { path = "../ax9p", optional = true }
axnet = { path = "../axnet", optional = true }
axdisplay = { path = "../axdisplay", optional = true }
axtask = { path = "../axtask", optional = true }

crate_interface = { path = "../../crates/crate_interface" }
percpu = { path = "../../crates/percpu", optional = true }
kernel_guard = { path = "../../crates/kernel_guard", optional = true }
lazy_init = { path = "../../crates/lazy_init", optional = true }
dtb = { path = "../../crates/dtb", optional = true}
