[package]
name = "rux9p"
version = "0.1.0"
edition = "2021"
authors = ["Zheng Wu <hello_weekday@163.com>"]
description = "RuxOS Plan-9 filesystem module"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/syswonder/ruxos"
repository = "https://github.com/syswonder/ruxos/tree/main/modules/rux9p"

[features]
virtio-9p = ["ruxdriver/virtio-9p", "ruxdriver/virtio-9p"]
net-9p = ["axnet", "driver_common", "ruxdriver/dyn" , "ruxdriver/_9p"]
need_auth = []

[dependencies]
log = "0.4"
spin = "0.9"
driver_9p = { path = "../../crates/driver_9p"}
axfs_vfs = { path = "../../crates/axfs_vfs"}
driver_common = { path = "../../crates/driver_common", optional = true}

ruxfs = { path = "../ruxfs"}
axnet = { path = "../axnet", optional = true}
ruxdriver = { path = "../ruxdriver"}