[package]
name = "ruxdriver"
version = "0.1.0"
edition = "2021"
authors = [
    "Yuekai Jia <equation618@gmail.com>", 
    "ChengXiang Qi <kuangjux@outlook.com>",
    "Zheng Wu <hello_weekday@163.com>",
]
description = "Ruxos device drivers"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/syswonder/ruxos"
repository = "https://github.com/syswonder/ruxos/tree/main/modules/ruxdriver"

[features]
dyn = []
bus-mmio = []
bus-pci = ["dep:driver_pci", "dep:ruxhal", "dep:ruxconfig"]
net = ["driver_net"]
block = ["driver_block"]
display = ["driver_display"]
_9p = ["driver_9p"]

# Enabled by features `virtio-*`
virtio = ["driver_virtio", "dep:axalloc", "dep:ruxhal", "dep:ruxconfig"]

# various types of drivers
virtio-blk = ["block", "virtio", "driver_virtio/block"]
virtio-net = ["net", "virtio", "driver_virtio/net"]
virtio-gpu = ["display", "virtio", "driver_virtio/gpu"]
virtio-9p = ["_9p","virtio", "driver_virtio/v9p"]
ramdisk = ["block", "driver_block/ramdisk"]
bcm2835-sdhci = ["block", "driver_block/bcm2835-sdhci"]
ixgbe = ["net", "driver_net/ixgbe", "dep:axalloc", "dep:ruxhal"]
# more devices example: e1000 = ["net", "driver_net/e1000"]

default = ["bus-mmio"]

[dependencies]
log = "0.4"
cfg-if = "1.0"
crate_interface = "0.1.1"
driver_common = { path = "../../crates/driver_common" }
driver_block = { path = "../../crates/driver_block", optional = true }
driver_net = { path = "../../crates/driver_net", optional = true }
driver_display = { path = "../../crates/driver_display", optional = true }
driver_9p = { path = "../../crates/driver_9p", optional = true }
driver_pci = { path = "../../crates/driver_pci", optional = true }
driver_virtio = { path = "../../crates/driver_virtio", optional = true }

axalloc = { path = "../axalloc", optional = true }
ruxhal = { path = "../ruxhal", optional = true }
ruxconfig = { path = "../ruxconfig", optional = true }



