[package]
name = "ruxfs"
version = "0.1.0"
edition = "2021"
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "Zheng Wu <hello_weekday@163.com>",
]
description = "Ruxos filesystem module"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/syswonder/ruxos"
repository = "https://github.com/syswonder/ruxos/tree/main/modules/ruxfs"

[features]
devfs = ["dep:axfs_devfs"]
ramfs = ["dep:axfs_ramfs"]
procfs = ["dep:axfs_ramfs"]
sysfs = ["dep:axfs_ramfs"]
etcfs = ["dep:axfs_ramfs"]
fatfs = ["dep:fatfs"]
myfs = ["dep:crate_interface"]
use-ramdisk = []
alloc = ["axalloc"]
fp_simd = []

default = ["devfs", "ramfs", "fatfs", "procfs", "sysfs", "etcfs"]

[dependencies]
log = "0.4"
cfg-if = "1.0"
lazy_init = { path = "../../crates/lazy_init" }
capability = { path = "../../crates/capability" }
driver_block = { path = "../../crates/driver_block" }
axio = { path = "../../crates/axio", features = ["alloc"] }
axerrno = { path = "../../crates/axerrno" }
axfs_vfs = { path = "../../crates/axfs_vfs" }
axfs_devfs = { path = "../../crates/axfs_devfs", optional = true }
axfs_ramfs = { path = "../../crates/axfs_ramfs", optional = true }
ruxdriver = { path = "../ruxdriver", features = ["block"] }
axsync = { path = "../axsync" }
crate_interface = { version = "0.1.1", optional = true }
axalloc = { path = "../axalloc", optional = true }
memory_addr = "0.1.0"

[dependencies.fatfs]
git = "https://github.com/syswonder/rust-fatfs.git"
rev = "bf8ad02"
optional = true
default-features = false
features = [ # no std
    "alloc",
    "lfn",
    "log_level_trace",
    "unicode",
]

[dev-dependencies]
ruxdriver = { path = "../ruxdriver", features = ["block", "ramdisk"] }
driver_block = { path = "../../crates/driver_block", features = ["ramdisk"] }
axsync = { path = "../axsync", features = ["multitask"] }
ruxtask = { path = "../ruxtask", features = ["test"] }
