[package]
name = "ruxfs"
version = "0.1.0"
edition = "2021"
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "Zheng Wu <hello_weekday@163.com>",
]
description = "Ruxos filesystem module"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/syswonder/ruxos"
repository = "https://github.com/syswonder/ruxos/tree/main/modules/ruxfs"

[features]
devfs = ["dep:axfs_devfs"]
ramfs = ["dep:axfs_ramfs"]
procfs = ["dep:axfs_ramfs"]
sysfs = ["dep:axfs_ramfs"]
etcfs = ["dep:axfs_ramfs"]
blkfs = []
fatfs = ["blkfs", "dep:fatfs"]
# TODO: wait for CI support for ext4
# lwext4_rust = ["blkfs", "dep:lwext4_rust"]
ext4_rs = ["blkfs", "dep:ext4_rs"]
another_ext4 = ["blkfs","dep:another_ext4"]
myfs = []
use-ramdisk = []
alloc = ["axalloc"]
fp_simd = []

default = ["devfs", "ramfs", "procfs", "sysfs", "etcfs"]

[dependencies]
log = "0.4"
spin = "0.9"
cfg-if = "1.0"
lazy_init = { path = "../../crates/lazy_init" }
capability = { path = "../../crates/capability" }
driver_block = { path = "../../crates/driver_block" }
axio = { path = "../../crates/axio", features = ["alloc"] }
axerrno = { path = "../../crates/axerrno" }
axfs_vfs = { path = "../../crates/axfs_vfs" }
axfs_devfs = { path = "../../crates/axfs_devfs", optional = true }
axfs_ramfs = { path = "../../crates/axfs_ramfs", optional = true }
crate_interface = { version = "0.1.1" }

ruxdriver = { path = "../ruxdriver", features = ["block"] }
axalloc = { path = "../axalloc", optional = true }
memory_addr = "0.1.0"
# lwext4_rust = { git = "https://github.com/elliott10/lwext4_rust", optional = true }
ext4_rs = { git = "https://github.com/yuoo655/ext4_rs.git", rev= "6bcc7f5", optional = true }
another_ext4 = { git = "https://github.com/LJxTHUCS/another_ext4.git", rev = "3c3e03a", optional = true }

[dependencies.fatfs]
git = "https://github.com/syswonder/rust-fatfs.git"
optional = true
default-features = false
features = [ # no std
    "alloc",
    "lfn",
    "log_level_trace",
    "unicode",
]

[dev-dependencies]
ruxdriver = { path = "../ruxdriver", features = ["block", "ramdisk", "dyn"] }
driver_block = { path = "../../crates/driver_block", features = ["ramdisk"] }
