[package]
name = "ruxfuse"
version = "0.1.0"
edition = "2021"
authors = ["Zheng Yuanhao <zhengyuanhao@pku.edu.cn>"]
description = "RuxOS fuse module"
license = "Mulan PSL v2"
homepage = "https://github.com/syswonder/ruxos"
repository = "https://github.com/syswonder/ruxos/tree/main/modules/ruxfuse"

[features]
alloc = ["axalloc"]
multitask = ["ruxtask/multitask"]

default = []

[dependencies]
log = "0.4"
spin = "0.9"
cfg-if = "1.0"
lazy_init = { path = "../../crates/lazy_init" }
capability = { path = "../../crates/capability" }
driver_block = { path = "../../crates/driver_block" }
axfs_vfs = { path = "../../crates/axfs_vfs" }
axfs_devfs = { path = "../../crates/axfs_devfs", optional = true }
axfs_ramfs = { path = "../../crates/axfs_ramfs", optional = true }
spinlock = { path = "../../crates/spinlock" }
crate_interface = { version = "0.1.1" }
memory_addr = "0.1.0"

ruxdriver = { path = "../ruxdriver", features = ["block"] }
axalloc = { path = "../axalloc", optional = true }
ruxfs = { path = "../ruxfs" }
ruxtask = { path = "../ruxtask" }