
[package]
name = "ruxfutex"
version = "0.1.0"
edition = "2021"
authors = ["Zhi Zhou <saltyfish2233@gmail.com>"]
description = "Ruxos futex implementation"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/syswonder/ruxos"
repository = "https://github.com/syswonder/ruxos/tree/main/modules/ruxfutex"

[features]
default = []

irq = ["ruxtask/irq"]

[dependencies]
# Ruxos modules
axerrno = { path = "../../crates/axerrno" }

ruxconfig = { path = "../ruxconfig" }
ruxtask = { path = "../ruxtask", features = ["multitask"] }

# Other crates
log = "0.4"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
bitflags = "2.2"
ahash = { version = "0.8.7", default-features = false, features = [
    "compile-time-rng",
] }

[dev-dependencies]
memory_addr = { path = "../../crates/memory_addr" }
