[package]
name = "ruxhal"
version = "0.1.0"
edition = "2021"
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "yanjuguang <coolyanjg@163.com>",
]
description = "Ruxos hardware abstraction layer, provides unified APIs for platform-specific operations"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/syswonder/ruxos"
repository = "https://github.com/syswonder/ruxos/tree/main/modules/ruxhal"

[features]
smp = []
alloc = []
fp_simd = []
paging = ["axalloc", "page_table"]
irq = []
rtc = []
tls = ["alloc"]
default = []
musl = []

[dependencies]
log = "0.4"
cfg-if = "1.0"
bitflags = "2.2"
static_assertions = "1.1.0"
embedded-hal = "0.2.7"
axlog = { path = "../axlog" }
ruxconfig = { path = "../ruxconfig" }
axalloc = { path = "../axalloc", optional = true }
kernel_guard = "0.1.0"
spinlock = { path = "../../crates/spinlock" }
ratio = { path = "../../crates/ratio" }
lazy_init = { path = "../../crates/lazy_init" }
page_table = { path = "../../crates/page_table", optional = true }
page_table_entry = { path = "../../crates/page_table_entry" }
percpu = { path = "../../crates/percpu" }
memory_addr = "0.1.0"
handler_table = "0.1.0"
crate_interface = "0.1.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
x86_64 = "0.14"
x2apic = "0.4"
raw-cpuid = "11.0"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.10"
sbi-rt = { version = "0.0.3", features = ["legacy"] }
dtb = {path = "../../crates/dtb" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.3"
tock-registers = "0.8"
arm_gic = { path = "../../crates/arm_gic" }
arm_pl011 = { path = "../../crates/arm_pl011" }
dw_apb_uart = { path = "../../crates/dw_apb_uart" }
dtb = {path = "../../crates/dtb" }

[build-dependencies]
ruxconfig = { path = "../ruxconfig" }
